<resources>
    <string name="app_name">Who Tried to unlock my Phone? Capture Photos</string>

    <string name="first_check">I understand that sharing of inappropriate content will not be tolerated.</string>
    <string name="second_check">I confirm that Im 18 years old or above.</string>
    <string name="clickforprivacy">"By Clicking 'Get Started'. You are agree to above Terms of Use and Privacy Policy. "</string>

    <string name="subscribe_KEY1" >com.price.removeads</string>

    <string name="qintitle"><![CDATA[Play & Win Coins]]></string>
    <string name="qintdes"><![CDATA[Win 5,00,000 Coins & More]]></string>
    <string name="qintitle1">Play Now and Earn Up to 50,000</string>
    <string name="qintdes1"><![CDATA[Play and Earn 5,00,000 Coins & Mores]]></string>
    <string name="qnativetitle"><![CDATA[Play & Win Coins]]></string>


    <string name="admin_info_1">We need Device Administrator permission to monitor and detect screen unlock attempts.</string>
    <string name="admin_info_2">You can disable this permission any time in the your device settings.</string>
    <string name="admin_info_3">We will never erase or wipe your device\'s data.</string>
    <string name="alarm_set_for_first_time">Alarm Set For First TIme</string>
    <string name="all">All</string>
    <string name="app_settings">App Settings</string>
    <string name="application_visited">Application Visited</string>
    <string name="capture_intruder">Capture Intruder</string>
    <string name="captured_image">Captured Image</string>
    <string name="date_time">Date &amp; Time</string>
    <string name="delete">Delete</string>
    <string name="do_you_want_to_exit_app">Do you want to exit app?</string>
    <string name="email_content_subtitle">Capture Photos </string>
    <string name="email_content_title">Who Tried to unlock my Phone?</string>
    <string name="email_footer_text">This email was triggered by the Who Tried to unlock my Phone? Capture Photos App for Android.</string>
    <string name="email_id">E-mail Id</string>
    <string name="email_image_date_prefix">Taken on</string>
    <string name="email_map_button">Open in Google Maps</string>
    <string name="email_no_location_reason_geotag_off">No location found. Either the location option was turned off from the device settings or the device will be without a network connection.</string>
    <string name="email_subject">Alert! Someone is trying to unlock your device</string>
    <string name="enable_alarm_on_wrong_password">Enable Alarm on Wrong Password</string>
    <string name="enable_to_send_email_notification">Enable to send E-mail Notification</string>
    <string name="exit">Exit</string>
    <string name="fail_attempt">Fail Attempt</string>
    <string name="fail_attempt_only">Fail Attempts Only</string>
    <string name="flash_on_wrong_password">Flash On Wrong Password</string>
    <string name="four_failed_attempt">4 Failed Attempt</string>
    <string name="google_drive_sign_in">Google Drive Sign In</string>
    <string name="help">Help</string>
    <string name="help_a_1">An Android PIN or Password has to be at least 4 digits or character, and Patterns must have at least 4 connected dots. Therefore the intruder must enter at least 4 digits, character or dots etc. depends on lock type</string>
    <string name="help_a_2">No, Device Administration is not able to detect fingerprint unlock attempts due to the android system policy which keeps this event private.</string>
    <string name="help_a_3">This application uses a Gmail account to send alert emails about intruders.It Can only send emails on your behalf. The sent emails will be visible in your Gmail account. This application cannot read or delete your emails.</string>
    <string name="help_a_4">Make sure the enable to send email notification feature is enable in the app settings and that you have set up your gmail account successfully.Also,check if the recipient\'s email address is corrent.</string>
    <string name="help_a_5">If your device releases the camera after realizing the person who trying to unlock the phone is not registered face.This application acquires the camera and takes a picture of the intruder.</string>
    <string name="help_a_6">Device Administrator permission to monitor and detect screen unlock attempts. Camera Permission to capture image of intruder who wants to unlock phone and Storage permission to save intruders image into device.</string>
    <string name="help_a_7">Android lock screena and the PIN, Password or Pattern associated with it is not part of this application. Please refer to your device\'s user manual or contact your device manufacture\'s customer supports to fix the issue.</string>
    <string name="help_a_8">This application cannot erase any data on your device.</string>
    <string name="help_a_9">Make sure you disable Android Administrator permission to your device settings.</string>
    <string name="help_q_1">What does count as a failed unlock attempt?</string>
    <string name="help_q_2">Can detect wrong fingerprints?</string>
    <string name="help_q_3">Why this application need my Gmail account?</string>
    <string name="help_q_4">Why I am not receiving alert emails?</string>
    <string name="help_q_5">Does it work when face unlock is enabled?</string>
    <string name="help_q_6">Why does This application need Device Administrator,Camera etc. Permission?</string>
    <string name="help_q_7">What can I do in case I forgot my PIN, Password or Pattern lock?</string>
    <string name="help_q_8">Will This application wipe my device if too many failed unlock attempts occur?</string>
    <string name="help_q_9">Why I cannot uninstall the application?</string>
    <string name="include_list_of_launched_apps">Include List of Launched Apps</string>
    <string name="intruder_history">Intruder History</string>
    <string name="map_accuracy">Accuracy</string>
    <string name="map_estimatedAddress">Estimated Address</string>
    <string name="map_latitude">Latitude</string>
    <string name="map_longitude">Longitude</string>
    <string name="no">No</string>
    <string name="no_recent_activity_found">No recent activity found</string>
    <string name="notification_and_alarm">Notification and Alarm</string>
    <string name="one_failed_attempt">1 Failed Attempt</string>
    <string name="other_notifications">Other Notifications</string>
    <string name="others">Others</string>
    <string name="overlay_info_1">We need Overlay Permission to Capture hidden images.</string>
    <string name="overlay_info_2">You can disable this permission any time in the your Device Settings.</string>
    <string name="pref_report_id">Pref Report Id</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="rate_us">Rate Us</string>
    <string name="rationale_ask">This app may not work correctly without the requested permissions.</string>
    <string name="rationale_ask_again">This app may not work correctly without the requested permissions. Open the app settings screen to modify app permissions.</string>
    <string name="recent">Recent</string>
    <string name="recent_activity">Recent Activity</string>
    <string name="running_bg">App is running in background</string>
    <string name="save_report">Save Report</string>
    <string name="search_menu_title">Search</string>
    <string name="see_all">See All</string>
    <string name="select_folder_info_1">Select Folder to Save Captured Intruder\'s Image in your Device.</string>
    <string name="select_folder_info_2">We will never erase or wipe your device\'s data.</string>
    <string name="services_notifications">Service Notification</string>
    <string name="set_alarm_tone">Set Alarm Tone</string>
    <string name="set_email_address">Set Email Address</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="share_with_your_friends">Share with your Friends</string>
    <string name="show_notification">Show Notification</string>
    <string name="sort_by">Sort By</string>
    <string name="successful_attempt">Successful Attempt</string>
    <string name="successful_attempt_only">Successful Attempt Only</string>
    <string name="successful_unlock_attempt">Successful Unlock Attempts</string>
    <string name="sync_on_google_drive">Sync on Google Drive</string>
    <string name="three_failed_attempt">3 Failed Attempt</string>
    <string name="title_settings_dialog">Permissions Required</string>
    <string name="two_failed_attempt">2 Failed Attempt</string>
    <string name="uninstall_app">Uninstall app</string>
    <string name="unlock_attempts_limit">Unlock Attempts Limit</string>
    <string name="unsuccessful_unlock_attempt">Unsuccessful Unlock Attempts</string>
    <string name="usage_info_1">We need Application Usage permission to monitor Application Usage in your device</string>
    <string name="usage_info_2">We will never erase or wipe your device\'s data.</string>
    <string name="vibration_on_wrong_password">Vibration on Wrong Password</string>
    <string name="view_intruder">View Intruder</string>
    <string name="yes">Yes</string>

</resources>
