<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_above="@+id/btm1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="12dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="5dp"
                android:src="@drawable/ic_back" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="12dp"
                android:layout_toRightOf="@+id/ivBack"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/help"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp" />

        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_marginRight="@dimen/_12sdp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="@dimen/_35sdp"
                        android:layout_height="@dimen/_35sdp"
                        app:cardBackgroundColor="@color/setting_icon_bg_color"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="0dp">

                        <ImageView
                            android:layout_width="@dimen/_18sdp"
                            android:layout_height="@dimen/_18sdp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_smartphone" />
                    </androidx.cardview.widget.CardView>

                    <LinearLayout android:orientation="vertical" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_8sdp" android:layout_weight="1">
                        <TextView android:textSize="@dimen/_11ssp" android:textColor="@color/colorPrimary" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/help_q_1" android:fontFamily="@font/montserrat_medium"/>
                        <TextView android:textSize="@dimen/_9ssp" android:textColor="@color/recent_activity_color" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/help_a_1" android:fontFamily="@font/montserrat_regular"/>
                    </LinearLayout>
                </LinearLayout>
                <View android:background="@color/recent_activity_color" android:layout_width="match_parent" android:layout_height="0.3dp" android:layout_margin="@dimen/_12sdp" android:alpha="0.3"/>
                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_12sdp" android:layout_marginRight="@dimen/_12sdp">
                    <androidx.cardview.widget.CardView android:layout_width="@dimen/_35sdp" android:layout_height="@dimen/_35sdp" app:cardBackgroundColor="@color/setting_icon_bg_color" app:cardCornerRadius="10dp" app:cardElevation="0dp">
                        <ImageView android:layout_gravity="center" android:layout_width="@dimen/_18sdp" android:layout_height="@dimen/_18sdp" android:src="@drawable/ic_fingerprint"/>
                    </androidx.cardview.widget.CardView>
                    <LinearLayout android:orientation="vertical" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_8sdp" android:layout_weight="1">
                        <TextView android:textSize="@dimen/_11ssp" android:textColor="@color/colorPrimary" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/help_q_2" android:fontFamily="@font/montserrat_medium"/>
                        <TextView android:textSize="@dimen/_9ssp" android:textColor="@color/recent_activity_color" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/help_a_2" android:fontFamily="@font/montserrat_regular"/>
                    </LinearLayout>
                </LinearLayout>
                <View android:background="@color/recent_activity_color" android:layout_width="match_parent" android:layout_height="0.3dp" android:layout_margin="@dimen/_12sdp" android:alpha="0.3"/>
                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_12sdp" android:layout_marginRight="@dimen/_12sdp">
                    <androidx.cardview.widget.CardView android:layout_width="@dimen/_35sdp" android:layout_height="@dimen/_35sdp" app:cardBackgroundColor="@color/setting_icon_bg_color" app:cardCornerRadius="10dp" app:cardElevation="0dp">
                        <ImageView android:layout_gravity="center" android:layout_width="@dimen/_18sdp" android:layout_height="@dimen/_18sdp" android:src="@drawable/ic_message"/>
                    </androidx.cardview.widget.CardView>
                    <LinearLayout android:orientation="vertical" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_8sdp" android:layout_weight="1">
                        <TextView android:textSize="@dimen/_11ssp" android:textColor="@color/colorPrimary" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/help_q_3" android:fontFamily="@font/montserrat_medium"/>
                        <TextView android:textSize="@dimen/_9ssp" android:textColor="@color/recent_activity_color" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/help_a_3" android:fontFamily="@font/montserrat_regular"/>
                    </LinearLayout>
                </LinearLayout>
                <View android:background="@color/recent_activity_color" android:layout_width="match_parent" android:layout_height="0.3dp" android:layout_margin="@dimen/_12sdp" android:alpha="0.3"/>
                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_12sdp" android:layout_marginRight="@dimen/_12sdp">
                    <androidx.cardview.widget.CardView android:layout_width="@dimen/_35sdp" android:layout_height="@dimen/_35sdp" app:cardBackgroundColor="@color/setting_icon_bg_color" app:cardCornerRadius="10dp" app:cardElevation="0dp">
                        <ImageView android:layout_gravity="center" android:layout_width="@dimen/_18sdp" android:layout_height="@dimen/_18sdp" android:src="@drawable/ic_send_mail"/>
                    </androidx.cardview.widget.CardView>
                    <LinearLayout android:orientation="vertical" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_8sdp" android:layout_weight="1">
                        <TextView android:textSize="@dimen/_11ssp" android:textColor="@color/colorPrimary" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/help_q_4" android:fontFamily="@font/montserrat_medium"/>
                        <TextView android:textSize="@dimen/_9ssp" android:textColor="@color/recent_activity_color" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/help_a_4" android:fontFamily="@font/montserrat_regular"/>
                    </LinearLayout>
                </LinearLayout>
                <View android:background="@color/recent_activity_color" android:layout_width="match_parent" android:layout_height="0.3dp" android:layout_margin="@dimen/_12sdp" android:alpha="0.3"/>
                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_12sdp" android:layout_marginRight="@dimen/_12sdp">
                    <androidx.cardview.widget.CardView android:layout_width="@dimen/_35sdp" android:layout_height="@dimen/_35sdp" app:cardBackgroundColor="@color/setting_icon_bg_color" app:cardCornerRadius="10dp" app:cardElevation="0dp">
                        <ImageView android:layout_gravity="center" android:layout_width="@dimen/_18sdp" android:layout_height="@dimen/_18sdp" android:src="@drawable/ic_head"/>
                    </androidx.cardview.widget.CardView>
                    <LinearLayout android:orientation="vertical" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_8sdp" android:layout_weight="1">
                        <TextView android:textSize="@dimen/_11ssp" android:textColor="@color/colorPrimary" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/help_q_5" android:fontFamily="@font/montserrat_medium"/>
                        <TextView android:textSize="@dimen/_9ssp" android:textColor="@color/recent_activity_color" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/help_a_5" android:fontFamily="@font/montserrat_regular"/>
                    </LinearLayout>
                </LinearLayout>
                <View android:background="@color/recent_activity_color" android:layout_width="match_parent" android:layout_height="0.3dp" android:layout_margin="@dimen/_12sdp" android:alpha="0.3"/>
                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_12sdp" android:layout_marginRight="@dimen/_12sdp">
                    <androidx.cardview.widget.CardView android:layout_width="@dimen/_35sdp" android:layout_height="@dimen/_35sdp" app:cardBackgroundColor="@color/setting_icon_bg_color" app:cardCornerRadius="10dp" app:cardElevation="0dp">
                        <ImageView android:layout_gravity="center" android:layout_width="@dimen/_18sdp" android:layout_height="@dimen/_18sdp" android:src="@drawable/ic_surface1"/>
                    </androidx.cardview.widget.CardView>
                    <LinearLayout android:orientation="vertical" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_8sdp" android:layout_weight="1">
                        <TextView android:textSize="@dimen/_11ssp" android:textColor="@color/colorPrimary" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/help_q_6" android:fontFamily="@font/montserrat_medium"/>
                        <TextView android:textSize="@dimen/_9ssp" android:textColor="@color/recent_activity_color" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/help_a_6" android:fontFamily="@font/montserrat_regular"/>
                    </LinearLayout>
                </LinearLayout>
                <View android:background="@color/recent_activity_color" android:layout_width="match_parent" android:layout_height="0.3dp" android:layout_margin="@dimen/_12sdp" android:alpha="0.3"/>
                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_12sdp" android:layout_marginRight="@dimen/_12sdp">
                    <androidx.cardview.widget.CardView android:layout_width="@dimen/_35sdp" android:layout_height="@dimen/_35sdp" app:cardBackgroundColor="@color/setting_icon_bg_color" app:cardCornerRadius="10dp" app:cardElevation="0dp">
                        <ImageView android:layout_gravity="center" android:layout_width="@dimen/_18sdp" android:layout_height="@dimen/_18sdp" android:src="@drawable/ic_padlock"/>
                    </androidx.cardview.widget.CardView>
                    <LinearLayout android:orientation="vertical" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_8sdp" android:layout_weight="1">
                        <TextView android:textSize="@dimen/_11ssp" android:textColor="@color/colorPrimary" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/help_q_7" android:fontFamily="@font/montserrat_medium"/>
                        <TextView android:textSize="@dimen/_9ssp" android:textColor="@color/recent_activity_color" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/help_a_7" android:fontFamily="@font/montserrat_regular"/>
                    </LinearLayout>
                </LinearLayout>
                <View android:background="@color/recent_activity_color" android:layout_width="match_parent" android:layout_height="0.3dp" android:layout_margin="@dimen/_12sdp" android:alpha="0.3"/>
                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_12sdp" android:layout_marginRight="@dimen/_12sdp">
                    <androidx.cardview.widget.CardView android:layout_width="@dimen/_35sdp" android:layout_height="@dimen/_35sdp" app:cardBackgroundColor="@color/setting_icon_bg_color" app:cardCornerRadius="10dp" app:cardElevation="0dp">
                        <ImageView android:layout_gravity="center" android:layout_width="@dimen/_18sdp" android:layout_height="@dimen/_18sdp" android:src="@drawable/ic_eraser"/>
                    </androidx.cardview.widget.CardView>
                    <LinearLayout android:orientation="vertical" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_8sdp" android:layout_weight="1">
                        <TextView android:textSize="@dimen/_11ssp" android:textColor="@color/colorPrimary" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/help_q_8" android:fontFamily="@font/montserrat_medium"/>
                        <TextView android:textSize="@dimen/_9ssp" android:textColor="@color/recent_activity_color" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/help_a_8" android:fontFamily="@font/montserrat_regular"/>
                    </LinearLayout>
                </LinearLayout>
                <View android:background="@color/recent_activity_color" android:layout_width="match_parent" android:layout_height="0.3dp" android:layout_margin="@dimen/_12sdp" android:alpha="0.3"/>
                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_12sdp" android:layout_marginRight="@dimen/_12sdp" android:layout_marginBottom="@dimen/_12sdp">
                    <androidx.cardview.widget.CardView android:layout_width="@dimen/_35sdp" android:layout_height="@dimen/_35sdp" app:cardBackgroundColor="@color/setting_icon_bg_color" app:cardCornerRadius="10dp" app:cardElevation="0dp">
                        <ImageView android:layout_gravity="center" android:layout_width="@dimen/_18sdp" android:layout_height="@dimen/_18sdp" android:src="@drawable/ic_disabled"/>
                    </androidx.cardview.widget.CardView>
                    <LinearLayout android:orientation="vertical" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_8sdp" android:layout_weight="1">
                        <TextView android:textSize="@dimen/_11ssp" android:textColor="@color/colorPrimary" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/help_q_9" android:fontFamily="@font/montserrat_medium"/>
                        <TextView android:textSize="@dimen/_9ssp" android:textColor="@color/recent_activity_color" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/help_a_9" android:fontFamily="@font/montserrat_regular"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/btm1"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center"
        android:layout_alignParentBottom="true">

        <include
            android:id="@+id/reguler_banner_ad"
            layout="@layout/ads_layout_banner"
            android:visibility="visible" />

    </RelativeLayout>

</RelativeLayout>
